--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,24 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/custom-theme.scss", "src/styles.css"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/android-chrome-192x192.png",
+              "src/favicon-16x16.png",
+              "src/mstile-310x150.png",
+              "scr/android-chrome-512x512.png",
+              "src/favicon-32x32.png",
+              "scr/mstile-310x310.png",
+              "src/apple-touch-icon.png",
+              "src/manifest.json",
+              "src/mstile-70x70.png",
+              "src/browserconfig.xml",
+              "src/mstile-144x144.png",
+              "scr/safari-pinned-tab.svg",
+              "src/mstile-150x150.png"
+            ],
+            "styles": ["src/lemonmart-theme.scss", "src/styles.css"],
             "scripts": []
           },
           "configurations": {
