--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lemon-mart",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -44,6 +45,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -52,6 +54,7 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "angular-unit-test-helper": "^11.0.2",
