--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -56,6 +57,7 @@
     "@angular/compiler-cli": "~11.0.5",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.6.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.11.1",
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.0",
