--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "fake-jwt-sign": "^1.1.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
