--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@angular/router": "~11.0.5",
     "fake-jwt-sign": "^1.1.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
+    "subsink": "^1.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
